--- a/feb/04.md
+++ b/feb/04.md
@@ -8,5 +8,7 @@ Read: [The great SameSite confusion](https://jub0bs.com/posts/2021-01-29-great-s
 
 Play: [podinfo](https://github.com/stefanprodan/podinfo)
 
+Play: [My fork of podinfo as a cookiecutter](https://github.com/defn/podinfo)
+
 Play: GitHub Actions
 
