show lamda gitbook

--- a/feb/04.md
+++ b/feb/04.md
@@ -12,3 +12,4 @@ Play: [My fork of podinfo as a cookiecutter](https://github.com/defn/podinfo)
 
 Play: GitHub Actions
 
+Show: the gitbook to lamda
