--- a/february-2021/04.md
+++ b/february-2021/04.md
@@ -14,5 +14,5 @@ Play: [My fork of podinfo as a cookiecutter](https://github.com/defn/podinfo)
 
 Play: GitHub Actions
 
-Show: the gitbook to lamda and he thinks, it's awesome and cool!
+Show: the gitbook to lamda and he thinks, it's awesome and cool
 
