--- a/february-2021/05.md
+++ b/february-2021/05.md
@@ -2,4 +2,6 @@
 
 Play: [OpenKruise](https://github.blog/2021-02-03-deployment-reliability-at-github/)
 
+Play: katt + catt: running two kind servers on a c.2 droplet
+
 Read: [Multi-cluster Linkerd](https://linkerd.io/2/features/multicluster/)
