play with gloo, read json patch

--- a/february-2021/06.md
+++ b/february-2021/06.md
@@ -3,3 +3,7 @@
 Play: [Helm + kustomize post-rendering](https://github.com/thomastaylor312/advanced-helm-demos/tree/master/post-render)
 
 Play: Remote control multiple KinD nodes
+
+Play: [Gloo K8S install](https://docs.solo.io/gloo-edge/latest/installation/gateway/kubernetes/)
+
+Read: [JSON patch](http://jsonpatch.com/)
