--- a/41.md
+++ b/41.md
@@ -1,3 +1,5 @@
 # 41
 
 Play: [k3d + cilium](https://sandstorm.de/de/blog/post/running-cilium-in-k3s-and-k3d-lightweight-kubernetes-on-mac-os-for-development.html)
+
+Play: [Terraform provider scaffolding](https://github.com/hashicorp/terraform-provider-scaffolding)
