nomad home server

--- a/46.md
+++ b/46.md
@@ -2,4 +2,6 @@
 
 Play: [Dittostack](https://sites.fastspring.com/dittostack/product/dittostack)
 
-Play: [k3s](https://k3s.io/)
+Play: [Multi-node k3s](https://k3s.io/)
+
+Read: [Nomad home server](https://mrkaran.dev/posts/home-server-nomad/)
